Correct the text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ background-color: #fff;
 
 .white-section {
   background-color: #fff;
-  padding: 5%;
+  padding: 5% 10%;
 }
 
 .facts {
@@ -92,7 +92,7 @@ position: relative;
 
 .cat-img {
   float: left;
-  margin: 0 20px 20px 0;
+  margin: 4% 2%;
 
 }
 
